# iamreader-rs

./: .gitignore  AUTHORS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  dev_bootstrap.sh  dev_debug.sh  get_models.sh
src/: main.rs
src/app/: action_handler.rs  app.rs  mod.rs  playback.rs  recording.rs
src/audio/: denoise.rs  mod.rs  player.rs  processing.rs  recorder.rs  waveform.rs
src/project/: compiler.rs  markers.rs  metadata.rs  mod.rs  project.rs
src/ui/: mod.rs  ui.rs  updater.rs
src/utils/: assets.rs  fifo.rs  format.rs  indexes.rs  keyboard.rs  logger.rs  mod.rs  parse.rs  paths.rs  stats.rs  transcription.rs
ui/: cmp_button_bar.slint  cmp_compile_progress.slint  cmp_dialog_header.slint  cmp_file_list.slint  cmp_hint_bar.slint  cmp_level_indicator.slint  cmp_main_menu.slint  cmp_meta_bar.slint  cmp_modal_overlay.slint  cmp_mode_indicators.slint  cmp_section_header.slint  cmp_selectable_list.slint  cmp_status_indicators.slint  cmp_text_input.slint  cmp_title_bar.slint  cmp_toggle_button.slint  cmp_waveform.slint  dialog_chunk.slint  dialog_delete_chunk.slint  dialog_markers.slint  dialog_project.slint  dialog_shortcuts.slint  dialog_toc.slint  main.slint
